styles.css
body {
    margin: 0px;
    overflow-y: hidden;
}


.landing-page {
    background-image: url('./images/main.gif');
    background-repeat: no-repeat;
    background-size: cover;
    width: auto;
    height: 885px;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    gap: 250px;
}

/*LEFT BOX*/

.left-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.title {
    font-family: "Angkor", "Berkshire Swash", cursive;
    color: #F8D210;
    font-size: 200px;
    line-height: 0.9;
}

img.logo {
    width: 130px;
    height: auto;
}

button.recipes {
    background-color: #EF601E;
    width: 200px;
    height: 60px;
    border: none;
    color: #F8D210;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 24px;
    font-family: Georgia, "Times New Roman", cursive;
}

a.recipes {
    text-decoration: none;
    color: #F8D210;
}

/*RIGHT BOX*/

.right-box {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-transform: uppercase;
    font-family: Georgia, "Times New Roman", cursive;
    font-size: 32px;
    font-weight: bold;
    writing-mode: vertical-lr;
    text-orientation: upright;
}

.text-inner {
    display: flex;
}

.rti-creator-one {
    color: #FFFFFF;
}

.rti-creator-two {
    color: #F3C997;
}

.text-outer {
    display: flex;
    align-self: flex-start;
    color: #EF601E;
    margin-top: 75px;
}

